Fixed overflowing banner, z-index of add button

--- a/assets/src/components/resume/banner/_banner.scss
+++ b/assets/src/components/resume/banner/_banner.scss
@@ -44,6 +44,7 @@
       position: relative;
       transition: all .2s ease;
       width: 1.5em;
+      z-index: 1;
 
       i {
         margin: auto;
@@ -125,7 +126,7 @@
       }
 
       input {
-        min-width: 18em;
+        min-width: 15em;
 
         &.twitter {
           padding-left: 1.6em;
